<resources>
    <string name="app_name">途蜜欢行</string>
    <string name="load_information">拼命加载中...</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_finish">完成</string>
    <string name="btn_publish">发布</string>
    <string name="btn_search">搜索</string>
    <string name="btn_apply">申请</string>
    <string name="btn_next">下一步</string>
    <string name="btn_bind">绑定</string>
    <string name="btn_send">发送</string>
    <string name="btn_ask">提问</string>
    <string name="btn_select">查询</string>
    <string name="btn_favorite">收藏</string>
    <string name="btn_nav">导航</string>
    <string name="toast_exit_app">再按一次退出</string>
    <string name="area_null">地区不能为空</string>
    <string name="btn_set_net">立即设置</string>
    <string name="btn_do_nothing">我知道了</string>
    <string name="title_qrcode_scan">二维码扫描</string>
    <string name="limit_input_text">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="limit_input_text_for_number">0123456789</string>
    <string name="live_city">居住城市</string>
    <string name="text_exper">立即体验</string>
    <string name="title_login">请登录</string>
    <string name="text_tips_for_login">为了提高用户信息安全，请您使用本机号码</string>
    <string name="text_phone">手机号码</string>
    <string name="text_phone_hint">请输入手机号码</string>
    <string name="text_pwd">密码</string>
    <string name="text_pwd_hint">请输入密码</string>
    <string name="text_auth_code">验证码</string>
    <string name="text_auth_code_hint">请输入验证码</string>
    <string name="auth_code_get">获取验证码</string>
    <string name="auth_right">同意并接受途蜜欢行的      服务条款</string>
    <string name="btn_auth_text">获取验证码</string>
    <string name="btn_auth_text_for_countdown">%d秒重新获取</string>
    <string name="btn_commit">提交</string>
    <string name="title_reg">请注册</string>
    <string name="title_active">激活途蜜盒子</string>
    <string name="activite_car_info">车辆信息</string>
    <string name="activite_box">途蜜盒子</string>
    <string name="activite_finish">激活完成</string>
    <string name="car_branch_choose">车型选择</string>
    <string name="text_car_plate_hint">请输入车牌号</string>
    <string name="text_car_oil">燃油类型</string>
    <string name="text_range_calibration">里程校准</string>
    <string name="range_unit">公里</string>
    <string name="text_range_calibration_hint">请输入行驶里程</string>
    <string name="text_car_list">选择车辆</string>
    <string name="btn_qrcode">扫描二维码</string>
    <string name="btn_manual_input">手动输入</string>
    <string name="text_serialnumber">序列号</string>
    <string name="text_snum_null">请输入序列号</string>
    <string name="text_active">激活码</string>
    <string name="text_active_hint">(XXXX-XXXX-XXXX-XXXX)</string>
    <string name="text_for_buy">如果没有，请先</string>
    <string name="btn_buy">购买</string>
    <string name="title_pwd_forget">密码找回</string>
    <string name="text_forget_account">帐号信息</string>
    <string name="text_forget_confirm">填写验证码</string>
    <string name="text_forget_finish">修改密码</string>
    <string name="account_text_hint">邮箱/手机号码</string>
    <string name="authcode_text_hint">请输入验证码</string>
    <string name="authcode_text_email">验证码已发送至邮箱：%s</string>
    <string name="authcode_text_phone">验证码已发送至此号码：%s</string>
    <string name="title_experts">专家问答</string>
    <string name="title_reservation">预约</string>
    <string name="title_my_reservation">我的预约</string>
    <string name="title_maintain">保养</string>
    <string name="text_distance_for_maintain">爱车当前里程： </string>
    <string name="btn_correct">校准 </string>
    <string name="btn_order">立即预约 </string>
    <string name="text_maintain_time_tip">小蜜智能分析，距离下次保养还有：%s公里</string>
    <string name="btn_maintian_period">爱车保养周期</string>
    <string name="btn_maintian_item">零件保养</string>
    <string name="btn_maintian_recoder">保养记录</string>
    <string name="text_pre_maintain_time">上次保养时间：%s</string>
    <string name="title_reservation_recoder">保养记录</string>
    <string name="title_maintain_item">零件保养</string>
    <string name="title_maintain_add">添加保养</string>
    <string name="text_maintain_range">里程：</string>
    <string name="text_maintain_time">时间：</string>
    <string name="text_maintain_cost">费用：</string>
    <string name="text_maintain_item">保养项：</string>
    <string name="text_maintain_type">类型：</string>
    <string name="text_maintain_remark">备注：</string>
    <string name="text_maintain_range_hint">保养里程      公里</string>
    <string name="text_maintain_time_hint">选择保养时间</string>
    <string name="text_maintain_cost_hint">保养费用      元</string>
    <string name="text_maintain_item_hint">做了哪些保养</string>
    <string name="title_merchants">保养商家</string>
    <string name="btn_order_now">预约</string>
    <string name="title_merchant_detail">商家详情</string>
    <string name="text_merchant_phone">联系电话</string>
    <string name="text_merchant_map">地图导航</string>
    <string name="text_merchant_comment">历史评价</string>
    <string name="text_vip">专享</string>
    <string name="text_privilege">优惠</string>
    <string name="text_vip_privilege">专享优惠</string>
    <string name="text_current_distance">当前里程：%skm</string>
    <string name="text_order_time">预约时间：%s</string>
    <string name="text_maintain_items">根据车况，推荐的以下保养项目，请选择</string>
    <string name="text_add_maitain">添加保养项</string>
    <string name="text_wait_order">已向%s发送预约请求，请耐心等待商家确认！</string>
    <string name="text_suc_order">%1$s已确认，保养时间定于%2$s，为了您的安全，请按时保养！%3$s</string>
    <string name="text_cancel_order">发送给%s的预约请求已取消！</string>
    <string name="text_finish_order">如期预约，+5积分。于%1$s在%2$s进行保养</string>
    <string name="text_my_reservation_score">积分：%d分</string>
    <string name="text_my_reservation_order">订单：%d</string>
    <string name="text_my_reservation_rate">成交率：%s</string>
    <string name="text_my_reservation_repair_order">维修保养救援：%d单</string>
    <string name="title_up">推荐</string>
    <string name="title_down">吐槽</string>
    <string name="title_comment">历史评价</string>
    <string name="btn_comment_up">推荐点评</string>
    <string name="btn_comment_down">吐槽点评</string>
    <string name="merchant_comment_up_hint">欢迎您的推荐</string>
    <string name="merchant_comment_down_hint">欢迎您的吐槽</string>
    <string name="title_my_realtime">我的实时油价</string>
    <string name="text_real_oil_manage">管理</string>
    <string name="text_subscribe_oil">订阅更多加油站</string>
    <string name="tips_no_subscription">对不起，您还没有订阅</string>
    <string name="text_subscription">马上订阅</string>
    <string name="text_cancel_subscription">取消订阅</string>
    <string name="btn_subscribe">订阅</string>
    <string name="tips_no_subscription_desc">订阅后，您会第一时间收到油价变化信息。立即搜索周边的加油站，订阅实时油价吧！</string>
    <string name="title_friend_oil_price_report">车友上报</string>
    <string name="title_oil_price_report">加油上报</string>
    <string name="text_oil_price_report">上报价格</string>
    <string name="text_comment_pub">发表点评</string>
    <string name="text_comment_hint">请写下您的评价，帮助更多的车友。</string>
    <string name="title_station">附近加油站</string>
    <string name="btn_detail">详情</string>
    <string name="title_gas_station">加油站详情</string>
    <string name="text_distance_sort">按距离排序</string>
    <string name="text_price_sort">按油价排序</string>
    <string name="text_fast_tips_one">一、照片要准确，要特别注意标志标线。</string>
    <string name="text_fast_tips_two">二、在地上留下记号后在拍照（把刹车痕迹在地面上保留下来）。</string>
    <string name="text_trouble_type">事故类型</string>
    <string name="text_car_header">车头部位</string>
    <string name="text_car_body">车身部位</string>
    <string name="text_car_crash">碰撞部位</string>
    <string name="text_car_other">补充其他</string>
    <string name="text_incident_tailgate">追尾事故（三张）</string>
    <string name="text_incident_rotary_island">环岛类事故（一张）</string>
    <string name="text_incident_overtake">超车变道事故（四张）</string>
    <string name="text_incident_cross_road">十字路口事故（五张）</string>
    <string name="title_vc">车况</string>
    <string name="title_vc_detail">故障详细</string>
    <string name="tips_no_box">对不起，您还没有绑定盒子</string>
    <string name="tips_no_login">对不起，您还没有登录</string>
    <string name="tips_no_box_desc">想了解爱车的状况，请您先购买小蜜盒子。您就是修车专家</string>
    <string name="title_trouble_code">故障码</string>
    <string name="text_ack_msg">已读</string>
    <string name="btn_onekey_help">一键救援</string>
    <string name="btn_order_shop">预约商家</string>
    <string name="btn_dash_board">仪表盘</string>
    <string name="btn_qa_professor">提问专家</string>
    <string name="btn_trouble_code">故障码</string>
    <string name="btn_vc_history">历史车况</string>
    <string name="btn_power_sys">动力系统</string>
    <string name="btn_under_sys">底盘系统</string>
    <string name="btn_body_sys">车身系统</string>
    <string name="btn_signal_sys">信号系统</string>
    <string name="text_user_hint">用户名/手机号</string>
    <string name="text_email_hint">邮箱</string>
    <string name="text_area_hint">地区</string>
    <string name="text_login_tips1">还没有帐号？</string>
    <string name="text_login_tips2">点此注册</string>
    <string name="text_login_tips3">找回密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_change">切换用户</string>
    <string name="btn_reg">注册</string>
    <string name="cp_right">©2015 sevoh.com</string>
    <string name="login_suc">登录成功</string>
    <string name="text_user_null">请输入用户名</string>
    <string name="text_user_min_limit">用户名长度必须大于6位</string>
    <string name="text_user_max_limit">用户名长度必须小于16位</string>
    <string name="text_pwd_min_limit">密码长度在6~16位之间</string>
    <string name="text_email_null">请输入邮箱</string>
    <string name="text_email_invalid">您输入的邮箱无效</string>
    <string name="text_pwd_null">请输入密码</string>
    <string name="text_serialnumber_hint">OBD序列号</string>
    <string name="text_active_has_no_signal">"请输入OBD激活码中的“-”字符"</string>
    <string name="text_active_invalid">无效的OBD激活码</string>
    <string name="text_active_null">请输入OBD激活码</string>
    <string name="text_area_null">请选择地区</string>
    <string name="btn_add_car_text">添加爱车</string>
    <string name="btn_order_maintain_text">预约保养</string>
    <string name="title_car_add">添加车辆</string>
    <string name="title_oil_add">选择燃油类型</string>
    <string name="text_car_model">车        型</string>
    <string name="text_car_model_hint">请选择车型</string>
    <string name="text_car_driviing">行驶区域</string>
    <string name="text_car_driving_hint">请选择城市</string>
    <string name="text_car_oil_hint">请选择燃油类型</string>
    <string name="text_car_plate">车牌号码</string>
    <string name="text_car_engine">发动机号</string>
    <string name="text_car_engine_hint">请输入发动机号</string>
    <string name="text_car_engine_vio_hint">请输入发动机号的最后%d位</string>
    <string name="text_car_vin">车架号码</string>
    <string name="text_car_vin_hint">请输入车架号</string>
    <string name="text_car_vin_vio_hint">请输入车架号的最后%d位</string>
    <string name="text_car_plate_type">号牌类型</string>
    <string name="text_car_plate_type_hint">请选择号牌</string>
    <string name="text_car_regist">登记证号</string>
    <string name="text_car_regist_hint">请输入登记证号</string>
    <string name="text_car_regist_vio_hint">请输入登记证号的最后%d位</string>
    <string name="title_car_model">选择车型</string>
    <string name="BaseTabActivity_Home">首页</string>
    <string name="BaseTabActivity_Trip">车况</string>
    <string name="BaseTabActivity_Service">服务</string>
    <string name="BaseTabActivity_MainTain">保养</string>
    <string name="BaseTabActivity_PersonlCenter">我的</string>
    <string name="title_home">车保姆</string>
    <string name="title_trip">行程</string>
    <string name="title_service">服务</string>
    <string name="title_rule_break">违章查询</string>
    <string name="title_nearby">附近周边</string>
    <string name="title_driveing">驾车路线</string>
    <string name="text_car_report">用车报告</string>
    <string name="text_oil_statistics">油耗统计</string>
    <string name="text_nearby_4s">周边4s店</string>
    <string name="text_violation">爱车违章</string>
    <string name="comment_contact">联系方式：</string>
    <string name="comment_desc">问题描述：</string>
    <string name="comment_hint">我来说两句~</string>
    <string name="hint_owner_email">请输入邮箱</string>
</resources>