<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_contact"
            android:textColor="@color/font_car_add_color"
            android:textSize="@dimen/Large_font" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/comment_bg"
            android:hint="@string/hint_owner_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dip"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_desc"
            android:textColor="@color/font_car_add_color"
            android:textSize="@dimen/Large_font" />

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/comment_bg"
            android:ems="5"
            android:focusable="true"
            android:gravity="top"
            android:hint="@string/comment_hint"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|text"
            android:lines="5"
            android:paddingLeft="5dip"
            android:paddingTop="5dip"
            android:selectAllOnFocus="true"
            android:singleLine="false" >
        </EditText>
    </LinearLayout>

</LinearLayout>