<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_top_bar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:text="@string/text_tips_for_login"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/Small_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:paddingRight="15dip" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:gravity="right"
                    android:text="@string/text_phone"
                    android:textColor="@color/top_bar_color"
                    android:textSize="@dimen/Middle_font" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@color/top_bar_color" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:background="@null"
                    android:digits="@string/limit_input_text"
                    android:hint="@string/text_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/top_bar_color"
                    android:textColorHint="@color/top_bar_color"
                    android:textSize="@dimen/Middle_font" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/top_bar_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:paddingRight="15dip" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:gravity="right"
                    android:text="@string/text_pwd"
                    android:textColor="@color/top_bar_color"
                    android:textSize="@dimen/Middle_font" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@color/top_bar_color" />

                <EditText
                    android:id="@+id/edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:background="@null"
                    android:digits="@string/limit_input_text_for_number"
                    android:hint="@string/text_pwd_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:textColor="@color/top_bar_color"
                    android:textColorHint="@color/top_bar_color"
                    android:textSize="@dimen/Middle_font" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/top_bar_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="bottom"
                android:minHeight="40dip"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:paddingRight="15dip" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:gravity="right"
                    android:text="@string/text_auth_code"
                    android:textColor="@color/top_bar_color"
                    android:textSize="@dimen/Middle_font" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@color/top_bar_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dip"
                    android:gravity="bottom"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:digits="@string/limit_input_text_for_number"
                        android:hint="@string/text_auth_code_hint"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:textColor="@color/top_bar_color"
                        android:textColorHint="@color/top_bar_color"
                        android:textSize="@dimen/Middle_font" />

                    <Button
                        android:id="@+id/btn_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="5dip"
                        android:background="@drawable/btn_auth_bg"
                        android:text="@string/btn_auth_text"
                        android:textColor="@drawable/auth_text_selector"
                        android:textSize="@dimen/Middle_font" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/top_bar_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/text_auth_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_right"
                android:textColor="@color/text_gray_color"
                android:textSize="@dimen/Small_font" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dip"
            android:background="@drawable/btn_login_bg"
            android:enabled="false"
            android:text="@string/btn_commit"
            android:textColor="@drawable/auth_commit_text_selector"
            android:textSize="@dimen/Middle_font" />
    </LinearLayout>

</LinearLayout>