<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fsms="http://schemas.android.com/apk/res/com.xtrd.obdcar.tumi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_gray"
    android:orientation="vertical" >

    <include layout="@layout/top_bar" />

    <include layout="@layout/layout_active_top" />

    <LinearLayout
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dip"
        android:background="@drawable/blue_no_round_bg"
        android:minHeight="40dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_qrcode"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_qrcode"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_manual_input"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/btn_qr_color"
            android:gravity="center"
            android:text="@string/btn_manual_input"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/blue_has_round_bg"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_serialnumber"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Middle_font" />

                <EditText
                    android:id="@+id/edit_snum"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_snum_null"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:minHeight="40dip"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/Middle_font" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@drawable/interval_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_active"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Middle_font" />

                <com.xtrd.obdcar.view.HPEditText
                    android:id="@+id/edit_active"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/text_active_hint"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:minHeight="40dip"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/Middle_font"
                    fsms:delimiter="-"
                    fsms:eachLength="4"
                    fsms:placeHolder="0"
                    fsms:totalLength="16" >
                </com.xtrd.obdcar.view.HPEditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tip_buy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_for_buy"
                android:textColor="@color/text_gray_color"
                android:textSize="@dimen/Middle_font" />

            <TextView
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_buy"
                android:textColor="@color/top_bar_color"
                android:textSize="@dimen/Middle_font" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_qrcode" />
    </LinearLayout>

</LinearLayout>