<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar" />

    <RelativeLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:layout_margin="10dip"
        android:background="@drawable/listview_bg"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_subscribe_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dip"
            android:background="@drawable/btn_blue_bg_no_round"
            android:minHeight="40dip"
            android:text="@string/text_subscribe_oil"
            android:textColor="@color/white"
            android:textSize="@dimen/Middle_font" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_subscribe_more"
            android:layout_below="@id/layout_top_bar" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <com.xtrd.obdcar.view.MyListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@color/interval"
                        android:dividerHeight="1dip"
                        android:listSelector="@color/transparent" >
                    </com.xtrd.obdcar.view.MyListView>
                </LinearLayout>
            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_no_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:src="@drawable/ic_no_subscription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/tips_no_subscription"
            android:textColor="@color/top_bar_color"
            android:textSize="@dimen/Middle_font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/tips_no_subscription_desc"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/Small_font" />

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_bg"
            android:minHeight="40dip"
            android:text="@string/text_subscription"
            android:textColor="@color/white"
            android:textSize="@dimen/Middle_font" />
    </LinearLayout>

</RelativeLayout>